tests/fail/union_forbidden_types.tk

// EXPECT: has restricted type 'bool'
shape BadBool(as b: bool | as val: u64)
// EXPECT: has type '^i32' which manages resources
shape BadUnique(as p: ^i32 | as val: u64)
// EXPECT: has type '~i32' which manages resources
shape BadShared(as p: ~i32 | as val: u64)

fn main() -> i32 { return 0; }
